--- a/SchoolY.csproj
+++ b/SchoolY.csproj
@@ -46,8 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="entrance_form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="entrance_form.Designer.cs">
+      <DependentUpon>entrance_form.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="entrance_form.resx">
+      <DependentUpon>entrance_form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
